color en fonction de la partie selectionné, selection de toute les partie avec une checkbox et alt sur un cube full

--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,9 @@ canvas {
     justify-content: center;
 }
 
+.choices-container>p{
+    margin-bottom : 10px; 
+}
 /* .noUI-connect {
     background: #4286f4 !important;
   }
